--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 		
 			<label for="moeda_origem">Moeda Origem:</label>
 			<input type="text" id="moeda_origem" name="origem" required
-	    		maxlength="3">
+	    		maxlength="3" value="EUR">
 	    	<br>	
 			<label for="moeda_destino">Moeda Destino:</label>
 			<input type="text" id="moeda_destino" name="destino" required
-	    		maxlength="3">    		
+	    		maxlength="3" value="BRL">     		
 			<br><br>
 			<input type="submit" value="Converter" formmethod="get">
     		
