Consumo de API via AJAX e atualização de dados em SINGLE PAGE

--- a/resultado.html
+++ b/resultado.html
@@ -56,7 +56,7 @@
 		<h1>O Resultado é:</h1>
 		<p>
 			1 EUR é igual a
-			<span id="valor_destino">X</span> <span id="moeda_destino">BRL</span>
+			<span id="valor_destino"></span> <span id="moeda_destino">BRL</span>
 		</p>
 		
 		<button type="button" onclick="voltar()">
