--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<br>
 			
 			<!--<input type="submit" value="Converter" formmethod="get">-->
-			<button type="button" onclick="chamarAPI()" class="btn btn-primary">Converter</button>
+			<button type="button" onclick="ovly.conversor.chamarAPI()" class="btn btn-primary">Converter</button>
     		
     	</form> 
 
